--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,40 @@
     <link rel="icon" type="imagem/svg" href="/buromobelexperte.svg">
     <title>Gerador de cor</title>
 </head>
+
 <body>
+    <!--Lateral-->
+    <div class="lateral">
+        <!--Cabeçlho-->
+        <div class="lateral_heard">
+            <h1>Últimas cores</h1>
+        </div>
+        <!--Corpo-->
+        <div class="ultima">
+            <div class="cor_caixa"></div>
+            <div class="info">
+                <div class="valor_cor">
+                    <h3>Hex: <span id="corHex"></span></h3>
+                </div>
+            </div>
+        </div>
+        <div class="penultima">
+            <div class="cor_caixa_penultima"></div>
+            <div class="info_2">
+                <div class="valor_cor_penultima">
+                    <h3>Hex: <span id="corHex_2"></span></h3>
+                </div>
+            </div>
+        </div>
+        <div class="antipenultima">
+            <div class="cor_caixa_antipenultima"></div>
+            <div class="info_3">
+                <div class="valor_cor_antipenultima">
+                    <h3>Hex: <span id="corHex_3"></span></h3>
+                </div>
+            </div>
+        </div>
+    </div>
     <!--Conteiner-->
     <div class="conteiner">
         <!--Cabeçalho-->
@@ -35,4 +69,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
